[gd_scene load_steps=18 format=2]

[ext_resource path="res://Tiles/Tile_23.png" type="Texture" id=1]
[ext_resource path="res://Tiles/Tile_12.png" type="Texture" id=2]
[ext_resource path="res://Tiles/Tile_02.png" type="Texture" id=3]
[ext_resource path="res://Tiles/Tile_03.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Tile_01.png" type="Texture" id=5]
[ext_resource path="res://Tiles/Tile_13.png" type="Texture" id=6]
[ext_resource path="res://Tiles/Tile_22.png" type="Texture" id=7]
[ext_resource path="res://Tiles/Tile_21.png" type="Texture" id=8]
[ext_resource path="res://Tiles/Tile_11.png" type="Texture" id=9]
[ext_resource path="res://Fonts/JungleAdventurer.otf" type="DynamicFontData" id=10]
[ext_resource path="res://Escenas/Menus/Arcade_menu.gd" type="Script" id=11]

[sub_resource type="TileSet" id=1]
0/name = "Tile_01.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tile_02.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Tile_03.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Tile_11.png 3"
3/texture = ExtResource( 9 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Tile_12.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Tile_13.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Tile_21.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Tile_22.png 7"
7/texture = ExtResource( 7 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Tile_23.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 29
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 10 )

[node name="Arcade_menu" type="Node2D"]
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 602.0
color = Color( 0, 0, 0, 1 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 31, 31 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 2, 0, 65536, 3, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 4, 0, 65555, 4, 0, 65556, 4, 0, 65557, 5, 0, 131072, 3, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 4, 0, 131091, 4, 0, 131092, 4, 0, 131093, 5, 0, 196608, 3, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 5, 0, 262144, 3, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 5, 0, 327680, 3, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327697, 4, 0, 327698, 4, 0, 327699, 4, 0, 327700, 4, 0, 327701, 5, 0, 393216, 3, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393233, 4, 0, 393234, 4, 0, 393235, 4, 0, 393236, 4, 0, 393237, 5, 0, 458752, 3, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 4, 0, 458773, 5, 0, 524288, 3, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 0, 524309, 5, 0, 589824, 3, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 5, 0, 655360, 3, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 5, 0, 720896, 3, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 5, 0, 786432, 6, 0, 786433, 7, 0, 786434, 7, 0, 786435, 7, 0, 786436, 7, 0, 786437, 7, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0, 786449, 7, 0, 786450, 7, 0, 786451, 7, 0, 786452, 7, 0, 786453, 8, 0 )

[node name="Aceptar" type="Button" parent="."]
margin_left = 448.0
margin_top = 387.0
margin_right = 579.0
margin_bottom = 425.0
custom_colors/font_color_focus = Color( 0.603922, 0.231373, 0.231373, 1 )
custom_colors/font_color_hover = Color( 0.603922, 0.231373, 0.231373, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Aceptar"
flat = true

[node name="Velocidad" type="Control" parent="."]
margin_left = 11.0
margin_top = 3.0
margin_right = 51.0
margin_bottom = 43.0

[node name="LabelVel" type="Label" parent="Velocidad"]
margin_left = 597.0
margin_top = 187.0
margin_right = 708.0
margin_bottom = 216.0
custom_fonts/font = SubResource( 2 )
text = "Velocidad"

[node name="LineEditVel" type="LineEdit" parent="Velocidad"]
margin_left = 597.0
margin_top = 237.0
margin_right = 703.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="Botones" type="Control" parent="Velocidad"]
margin_left = 708.0
margin_top = 240.0
margin_right = 737.0
margin_bottom = 283.0

[node name="SubirVel" type="Button" parent="Velocidad/Botones"]
margin_right = 30.0
margin_bottom = 20.0
text = "+"

[node name="BajarVel" type="Button" parent="Velocidad/Botones"]
margin_top = 23.0
margin_right = 30.0
margin_bottom = 43.0
text = "-"

[node name="Presiones" type="Control" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 46.0
margin_bottom = 44.0

[node name="LineEditPre" type="LineEdit" parent="Presiones"]
margin_left = 313.0
margin_top = 235.0
margin_right = 419.0
margin_bottom = 286.0
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1

[node name="LabelPre" type="Label" parent="Presiones"]
margin_left = 322.0
margin_top = 188.0
margin_right = 432.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
text = "Presiones"

[node name="Botones" type="Control" parent="Presiones"]
margin_left = 423.0
margin_top = 239.0
margin_right = 454.0
margin_bottom = 282.0

[node name="BajarPre" type="Button" parent="Presiones/Botones"]
margin_top = 23.0
margin_right = 31.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 16, 14 )
text = "-"

[node name="SubirPre" type="Button" parent="Presiones/Botones"]
margin_right = 31.232
margin_bottom = 20.0
rect_pivot_offset = Vector2( 16, 14 )
text = "+"

[node name="MasVel" type="Label" parent="."]
margin_left = 567.0
margin_top = 296.0
margin_right = 777.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 5 )
align = 1

[node name="MasPre" type="Label" parent="."]
margin_left = 293.0
margin_top = 297.0
margin_right = 493.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 6 )
align = 1

[connection signal="pressed" from="Aceptar" to="." method="_on_Aceptar_pressed"]
[connection signal="text_changed" from="Velocidad/LineEditVel" to="." method="_on_LineEditVel_text_changed"]
[connection signal="pressed" from="Velocidad/Botones/SubirVel" to="." method="_on_SubirVel_pressed"]
[connection signal="pressed" from="Velocidad/Botones/BajarVel" to="." method="_on_BajarVel_pressed"]
[connection signal="text_changed" from="Presiones/LineEditPre" to="." method="_on_LineEditPre_text_changed"]
[connection signal="pressed" from="Presiones/Botones/BajarPre" to="." method="_on_BajarPre_pressed"]
[connection signal="pressed" from="Presiones/Botones/SubirPre" to="." method="_on_SubirPre_pressed"]
